--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .section__info {
-  margin-top: 5.4375rem;
+  margin-top: 6.4375rem;
 }
 
 .section__hero__h1 {
@@ -27,7 +27,13 @@ body {
   color: #ffffff;
   margin-top: 8.25rem;
 }
-.hero__img {
+.hero__img__carrera {
+  max-width: 3.5rem;
+  max-height: 3.75rem;
+}
+.hero__img__facultades {
+  max-width: 3.4375rem;
+  max-height: 3.25rem;
 }
 .p__number {
   font-weight: 700;
@@ -46,7 +52,7 @@ body {
   margin: 0;
 }
 
-@media screen and (max-width: 656px) {
+@media screen and (max-width: 820px) {
   .header__img {
     max-width: 10.625rem;
     max-height: 4.25rem;
@@ -57,12 +63,29 @@ body {
     background-size: auto 14.25rem;
   }
   .section__info {
-    margin-top: 3.6875rem;
+    margin-top: 5rem;
   }
   .section__hero__h1 {
     font-size: 2.75rem;
     line-height: 3.25rem;
     margin-top: 4.5625rem;
+  }
+  .p__number {
+    font-size: 1.5rem;
+    line-height: 1.525rem;
+    letter-spacing: -0.05em;
+  }
+  .p__text {
+    font-size: 0.85rem;
+    line-height: 0.625rem;
+  }
+  .hero__img__carrera {
+    max-width: 1.6875rem;
+    max-height: 1.875rem;
+  }
+  .hero__img__facultades {
+    max-width: 1.6875rem;
+    max-height: 1.625rem;
   }
 }
 @media screen and (max-width: 360px) {
@@ -73,6 +96,9 @@ body {
   }
   .section__hero {
     background-size: auto 7.125rem;
+  }
+  .section__info {
+    margin-top: 1.6875rem;
   }
 
   .section__hero__h1 {
@@ -89,7 +115,13 @@ body {
   .p__text {
     font-size: 0.5625rem;
     line-height: 0.625rem;
-    color: #ffffff;
-    letter-spacing: -0.05em;
+  }
+  .hero__img__carrera {
+    max-width: 0.8125rem;
+    max-height: 0.9375rem;
+  }
+  .hero__img__facultades {
+    max-width: 0.8125rem;
+    max-height: 0.8125rem;
   }
 }
