se combina front de diego con symfony para visualizar tabla en la home

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   font-family: Helvetica, Arial, sans-serif;
-}
+} */
 .header__img {
   max-width: 16.3125rem;
   max-height: 6.5625rem;
