se corrige ruta de archivos, y se modifica datatable

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
 		{% block javascripts %}
 
 			<!-- JAVASCRIPT -->
-			<script src="{{ asset('assets/js/bootstrap-bundle.min.js') }}"></script>
+			<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
 			<script src="{{ asset('assets/js/pdfmake.min.js') }}"></script>
 			<script src="{{ asset('assets/js/vfs_fonts.min.js') }}"></script>
 			<script src="{{ asset('assets/js/datatables.min.js') }}"></script>
