Se agrega botones de descarga

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -61,18 +61,18 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row mt-5">
 				<div class="col">
 					<table id="example" class="display table table-hover" style="width: 100%">
 						<thead>
 							<tr>
-								<th>Actividad Curricular</th>
-								<th>Carácter</th>
-								<th>Contenidos mínimos de la actividad curricular</th>
-								<th>Área</th>
-								<th>Campo</th>
-								<th>Carrera</th>
-								<th>Unidad Académica</th>
+								<th style="width:10%;">Actividad Curricular</th>
+								<th style="width:10%;">Carácter</th>
+								<th style="width:30%;">Contenidos mínimos de la actividad curricular</th>
+								<th style="width:10%;">Área</th>
+								<th style="width:15%;">Campo</th>
+								<th style="width:15%;">Carrera</th>
+								<th style="width:10%;">Unidad Académica</th>
 							</tr>
 						</thead>
 						<tbody>
