se finaliza el abm de oferta academica

--- a/templates/Secure/breadcrumbs.html.twig
+++ b/templates/Secure/breadcrumbs.html.twig
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="row mt-2 mb-4">
 	<div class="col-12">
 		<ol class="breadcrumb m-0">
 			<li class="breadcrumb-item">
-				<a href="{{ path('index_dashboard') }}">Inicio</a>
+				<a href="{{ path('index_dashboard') }}">Mapa académico</a>
 			</li>
 			{% for breadcrumb in breadcrumbs %}
 				{% if breadcrumb.active is defined %}
