--- a/templates/Secure/navbar.html.twig
+++ b/templates/Secure/navbar.html.twig
@@ -4,11 +4,14 @@
 			<img src="{{ asset('assets/images/logo_uba_azul.png') }}" alt="Bootstrap" style="height:100px; margin-right:20px;margin-bottom:20px;">
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="three-dots-vertical"></span>
+			<span class="bi bi-list"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item dropdown">
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('index_dashboard') }}">Mapa académico</a>
+				</li>
+				{# <li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Mapa académico
 					</a>
@@ -16,7 +19,7 @@
 						<li>
 							<a class="dropdown-item" href="{{ path('index_dashboard') }}">Contenidos mínimos</a>
 						</li>
-						{# <li>
+						<li>
 							<a class="dropdown-item" href="#">Actividad curricular</a>
 						</li>
 						<li>
@@ -33,9 +36,9 @@
 						</li>
 						<li>
 							<a class="dropdown-item" href="#">Unidad académica</a>
-						</li> #}
+						</li>
 					</ul>
-				</li>
+				</li> #}
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						{{ app.user.name }}
