Se agrega filtro de busqueda en el thead

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -51,15 +51,7 @@
 			</div>
 		</section>
 		<section class="section__datatable">
-			<!-- <div class="row">
-				<div class="col">
-					<div class="row">
-						<button class="btn__download btn">Descargar búsqueda EXCEL</button>
-					</div>
-					<div class="row">
-						<button class="btn__download btn__download-pdf btn  mt-2">Descargar búsqueda PDF</button>
-					</div>
-				</div>
+			
 			</div> -->
 			<div class="row mt-5">
 				<div class="col">
@@ -89,6 +81,17 @@
 								</tr>
 							{% endfor %}
 						</tbody>
+						<tfoot>
+							<tr>
+								<th>Actividad Curricular</th>
+								<th>Carácter</th>
+								<th>Contenidos mínimos de la actividad curricular</th>
+								<th>Área</th>
+								<th>Campo</th>
+								<th>Carrera</th>
+								<th>Unidad Académica</th>
+							</tr>
+						</tfoot>
 						
 					</table>
 				</div>
