se sube dockerfile dockercompose y .env funcionando

--- a/templates/Secure/contenidos_minimos/form.contenidos.minimos.html.twig
+++ b/templates/Secure/contenidos_minimos/form.contenidos.minimos.html.twig
@@ -1,4 +1,4 @@
-{% extends 'secure/secure.index.html.twig' %}
+{% extends 'Secure/secure.index.html.twig' %}
 
 {% block content %}
 	<div class="row">
