--- a/templates/Secure/dashboard/main.index.html.twig
+++ b/templates/Secure/dashboard/main.index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'secure/secure.index.html.twig' %}
+{% extends 'Secure/secure.index.html.twig' %}
 
 {% block content %}
 	<div class="row">
